# nu_plugin_nutext

./: Cargo.toml  Makefile  README.md
.github/workflows/: package.yml
src/: lib.rs  main.rs
src/commands/: mod.rs  print.rs  register.rs  stringret.rs
tests/es/LC_MESSAGES/: hello.mo  hello.po
tools/: xnutext
