[package]
name = "nu_plugin_nutext"
version = "0.3.4"
edition = "2021"
license = "GPL-2.0-or-later"
exclude = ["*.mo", "*.po"]

[profile.release]
lto = "fat"

[dependencies]
current_locale = "0.1.1"
gettext = "0.4.0"
locale-match = { version = "=0.2.2", default-features = false, features = [
    "bcp47",
] }
nu-plugin = "0.104.0"
nu-protocol = "0.104.0"
strfmt = "0.2.4"
