[package]
name = "nu_plugin_nutext"
version = "0.6.1"
edition = "2024"
license = "GPL-2.0-or-later"
exclude = ["*.mo", "*.po"]
rust-version = "1.93.1"

[profile.release]
lto = "fat"

[dependencies]
current_locale = "0.1.1"
gettext = "0.4.0"
locale-match = { version = "=0.2.2", default-features = false, features = [
    "bcp47",
] }
nu-plugin = "0.113.0"
nu-protocol = "0.113.0"
strfmt = "0.2.5"
